[package]
name = "depthhead"
version = "0.1.0"
authors = ["Entscheider"]
keywords = ["houghforest"]

[dependencies]
rand = "=0.4"
serde = "=1.0"
serde_derive = "=1.0"
serde_json = "=1.0"
rayon = "=0.9"
log = "0.4"

error-chain = "0.11.0"

stamm = "0.2"

# DB-Reader
byteorder = "=1.0"
regex = "=0.2"
lazy_static = "=1.0"

# DB-Reader & Hough-Forest
image = "0.17"
imageproc = "0.12"



[dev-dependencies.depthhead_example_utils]
path = "./utils"
#default-features = false

[dev-dependencies]
# Example-Programs
clap = "2.29"
env_logger = "0.5"
freenectrs = "0.1"

[features]
default = ["reduce_bound_checks"]

reduce_bound_checks = []
